# beatfox

./: .gitignore  .prettierrc  CLAUDE.md  LICENSE  Makefile  README.md  astro.config.mjs  config.ts  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: deploy.yml
client/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/api/: client.ts  services.ts  types.ts
client/src/components/: DemoPage.tsx  LandingPage.tsx  SoundWaveVisualization.tsx
client/src/components/theme/: ThemeContext.ts  ThemeProvider.tsx  ThemeToggle.tsx
client/src/config/: constants.ts
client/src/domain/acoustics/: WavePhysics.ts
experiments/: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  COVERAGE_REPORT.md  Makefile  README.md
experiments/docs/: ABSORBING_BOUNDARY_FIX.md  PHYSICS_ANALYSIS.md  UI_ARCHITECTURE.md
experiments/examples/svg_layouts/: README.md
experiments/include/glad/: glad.h
experiments/shaders/: wave.frag  wave.vert
experiments/src/: AcousticUtils.h  Application.cpp  Application.h  AudioFileLoader.cpp  AudioFileLoader.h  AudioOutput.cpp  AudioOutput.h  AudioSample.cpp  AudioSample.h  AudioSource.h  CoordinateMapper.cpp  CoordinateMapper.h  DampingPreset.cpp  DampingPreset.h  ISimulationView.h  InputHandler.cpp  InputHandler.h  MetalSimulationBackend.h  MetalSimulationBackend.mm  Renderer.cpp  Renderer.h  SVGLoader.cpp  SVGLoader.h  SimulationController.cpp  SimulationController.h  SimulationEngine.cpp  SimulationEngine.h  SimulationState.h  SimulationUI.cpp  SimulationUI.h  WaveSimulation.cpp  WaveSimulation.h  glad.c  glad.h  main.cpp
experiments/src/shaders/: WaveEquation.metal
experiments/swiftui/: CMakeLists.txt  Package.swift  README.md  test_bridge.mm
experiments/swiftui/BeatfoxSimulation/Sources/: AppDelegate.swift  BeatfoxSimulationApp.swift  ControlPanelView.swift  KeyboardMonitor.swift  MouseHandlerView.swift  SimulationControllerBridge.h  SimulationControllerBridge.mm  SimulationView.swift  SimulationViewModel.swift  WaveVisualizationView.swift
experiments/tests/: AbsorbingBoundaryDebugTest.cpp  AudioOutputTest.cpp  CMakeLists.txt  CoordinateMapperTest.cpp  DampingPresetTest.cpp  InterferenceTest.cpp  ListenerTest.cpp  README.md  SimulationControllerTest.cpp  WallReflectionTest.cpp  WaveSimulationTest.cpp
public/: CNAME
server/: .env.example  package.json  tsconfig.json
server/src/: app.ts  index.ts
server/src/config/: index.ts
server/src/controllers/: health.controller.ts
server/src/middleware/: cors.middleware.ts  error.middleware.ts
server/src/routes/: api.routes.ts
src/app/components/: AutoToast.tsx  PageContent.tsx  SideBar.tsx
src/app/components/Header/: Header.tsx  Logo.tsx  MobileMenu.tsx  UserDropdown.tsx  menuItems.ts
src/app/constants/: menuItems.ts
src/app/hooks/: useLoaded.ts
src/app/providers/: ToastWrapper.tsx
src/components/: DarkModeToggle.tsx  HeroUIProvider.tsx
src/components/app/: Header.tsx  PageContent.tsx  SideBar.tsx
src/components/app/header/: Header.tsx  Logo.tsx  UserDropdown.tsx
src/layouts/: Layout.astro
src/pages/: index.astro
src/pages/app/: project-details.astro
src/styles/: global.css
